--- a/PoulaillerMaquette/PoulaillerMaquette/View/uc_gest.xaml
+++ b/PoulaillerMaquette/PoulaillerMaquette/View/uc_gest.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="PoulaillerMaquette.View.uc_config"
+﻿<UserControl x:Class="PoulaillerMaquette.View.uc_gest"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PoulaillerMaquette.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="LightPink">
+             d:DesignHeight="450" d:DesignWidth="800" Background="LightGoldenrodYellow">
     <Grid>
             
     </Grid>
