ajout début des fonctions (graphique)
ajout des premieres fonctions a mon interface graphique

--- a/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
+++ b/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
@@ -5,8 +5,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PoulaillerMaquette.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" Background="AliceBlue">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Button Grid.Row="0" Grid.Column="0" Name="BTN_porte" Content="OUVERT" Height="80" Width="250" IsEnabled="false"/>
+        <Label Grid.Row="0" Grid.Column="1" Name="TB_NbPoule" Content="0/3" Foreground="black" FontSize="42" Background="LightGray" RenderTransformOrigin="0.256,0.534" Width="150" Margin="126,72,124,73" />
+        <Grid Grid.Row="1" Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+        </Grid>
     </Grid>
 </UserControl>
