--- a/PoulaillerMaquette/PoulaillerMaquette/MainWindow.xaml
+++ b/PoulaillerMaquette/PoulaillerMaquette/MainWindow.xaml
@@ -60,8 +60,8 @@
             <Button Grid.Column="3" Name="BTN_info" Content="informations " Click="BTN_info_Click"></Button>
         </Grid>
 
-        <Grid Grid.Row="1" Name="window_container">
-
+        <Grid Grid.Row="1" Name="window_container" Loaded="window_container_Loaded">
+           
         </Grid>
 
         <Grid Grid.Row="2" Name="footer">
