--- a/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
+++ b/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
@@ -18,8 +18,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Name="BTN_porte" Content="OUVERT" Height="80" Width="250" IsEnabled="false"/>
-        <Label Grid.Row="0" Grid.Column="1" Name="TB_NbPoule" Content="0/3" Foreground="black" FontSize="42" Background="LightGray" RenderTransformOrigin="0.256,0.534" Width="150" Margin="126,72,124,73" />
+        <Label Grid.Row="0" Grid.Column="0" Name="Lbl_porte" Content="OUVERT" Height="80" Width="250" Margin="75,28,75,117" Background="#FF73D82C" BorderBrush="#FF70CD54" VerticalContentAlignment="Center" HorizontalContentAlignment="center"/>
+        <Button Grid.Row="0" Grid.Column="0" Name="BTN_changeporte" Content="ETAT PORTE" Height="20" Width="180" Margin="110,132,110,73" Click="BTN_changeporte_Click"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="TB_sub"></TextBox>
+        <Label Grid.Row="0" Grid.Column="1" Name="TB_NbPoule" Content="0/3" Foreground="black" FontSize="42" Background="LightGray" RenderTransformOrigin="0.256,0.534" Width="150" Margin="126,72,124,73" VerticalContentAlignment="Center" HorizontalContentAlignment="center"/>
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
