--- a/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
+++ b/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
@@ -19,8 +19,9 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Name="Lbl_porte" Content="OUVERT" Height="80" Width="250" Margin="75,28,75,117" Background="#FF73D82C" BorderBrush="#FF70CD54" VerticalContentAlignment="Center" HorizontalContentAlignment="center"/>
-        <Button Grid.Row="0" Grid.Column="0" Name="BTN_changeporte" Content="ETAT PORTE" Height="20" Width="180" Margin="110,132,110,73" Click="BTN_changeporte_Click"/>
+        <Button Grid.Row="0" Grid.Column="0" Name="BTN_changeporte" Content="OUVRIR/FERMER" Height="20" Width="180" Margin="110,132,110,73" Click="BTN_changeporte_Click"/>
         <TextBox Grid.Row="1" Grid.Column="1" Name="TB_sub" IsReadOnly="True" Width="300" Height="150"></TextBox>
+        <TextBox Grid.Row="1" Grid.Column="0" Name="TB_Debug" IsReadOnly="True" Width="300" Height="150"></TextBox>
         <Label Grid.Row="0" Grid.Column="1" Name="TB_NbPoule" Content="0/3" Foreground="black" FontSize="42" Background="LightGray" RenderTransformOrigin="0.256,0.534" Width="150" Margin="126,72,124,73" VerticalContentAlignment="Center" HorizontalContentAlignment="center"/>
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
