--- a/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
+++ b/PoulaillerMaquette/PoulaillerMaquette/View/uc_home.xaml
@@ -24,7 +24,7 @@
         <Button Grid.Row="1" Grid.Column="1" Name="BTN_back" Content="NON" Height="20" Width="50" Margin="200,132,110,73" Panel.ZIndex="1" Visibility="Hidden" Click="BTN_back_click"/>
         <TextBox Grid.Row="1" Grid.Column="1" Name="TB_sub" IsReadOnly="True" Width="300" Height="150"></TextBox>
         <TextBox Grid.Row="1" Grid.Column="0" Name="TB_Debug" IsReadOnly="True" Width="300" Height="150"></TextBox>
-        <Label Grid.Row="0" Grid.Column="1" Name="TB_NbPoule" Content="0/3" Foreground="black" FontSize="42" Background="LightGray" RenderTransformOrigin="0.256,0.534" Width="150" Margin="126,72,124,73" VerticalContentAlignment="Center" HorizontalContentAlignment="center"/>
+        <Label Grid.Row="0" Grid.Column="1" Name="TB_NbPoule" Content="x/x" Foreground="black" FontSize="42" Background="LightGray" RenderTransformOrigin="0.256,0.534" Width="150" Margin="126,72,124,73" VerticalContentAlignment="Center" HorizontalContentAlignment="center"/>
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
